--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "blog_a",
   "private": true,
+  "scripts": {
+    "stylelint": "npx stylelint **/*.{css,scss}"
+  },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
